--- a/LittleFormosa/ProfileStatsTableViewCell.xib
+++ b/LittleFormosa/ProfileStatsTableViewCell.xib
@@ -17,35 +17,8 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gFd-oV-4hW">
                         <rect key="frame" x="10" y="10" width="340" height="79.5"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WLb-ef-QV9">
-                                <rect key="frame" x="0.0" y="0.0" width="170" height="79.5"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Height" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFp-h3-oXM">
-                                        <rect key="frame" x="0.0" y="46" width="170" height="23.5"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5' 8&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYN-KW-cMl">
-                                        <rect key="frame" x="0.0" y="10" width="170" height="36"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="24"/>
-                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="DFp-h3-oXM" secondAttribute="trailing" id="Au8-S5-WCl"/>
-                                    <constraint firstAttribute="trailing" secondItem="KYN-KW-cMl" secondAttribute="trailing" id="Edn-Ne-gpa"/>
-                                    <constraint firstAttribute="bottom" secondItem="DFp-h3-oXM" secondAttribute="bottom" constant="10" id="Sg8-W3-e2x"/>
-                                    <constraint firstItem="DFp-h3-oXM" firstAttribute="top" secondItem="KYN-KW-cMl" secondAttribute="bottom" id="ZEE-j6-AHf"/>
-                                    <constraint firstItem="KYN-KW-cMl" firstAttribute="leading" secondItem="WLb-ef-QV9" secondAttribute="leading" id="es5-Xd-QAE"/>
-                                    <constraint firstItem="KYN-KW-cMl" firstAttribute="top" secondItem="WLb-ef-QV9" secondAttribute="top" constant="10" id="wpo-oT-vA8"/>
-                                    <constraint firstItem="DFp-h3-oXM" firstAttribute="leading" secondItem="WLb-ef-QV9" secondAttribute="leading" id="zsx-TF-9Tz"/>
-                                </constraints>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xRo-nr-wlt">
-                                <rect key="frame" x="170" y="0.0" width="170" height="79.5"/>
+                                <rect key="frame" x="0.0" y="0.5" width="170" height="79.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oyK-LS-o48">
                                         <rect key="frame" x="0.0" y="46" width="170" height="23.5"/>
@@ -71,6 +44,33 @@
                                     <constraint firstItem="DW1-uO-Erc" firstAttribute="leading" secondItem="xRo-nr-wlt" secondAttribute="leading" id="xxJ-dl-5c5"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WLb-ef-QV9">
+                                <rect key="frame" x="170" y="0.0" width="170" height="79.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Height" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DFp-h3-oXM">
+                                        <rect key="frame" x="0.0" y="46" width="170" height="23.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5' 8&quot;" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KYN-KW-cMl">
+                                        <rect key="frame" x="0.0" y="10" width="170" height="36"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="24"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="DFp-h3-oXM" secondAttribute="trailing" id="Au8-S5-WCl"/>
+                                    <constraint firstAttribute="trailing" secondItem="KYN-KW-cMl" secondAttribute="trailing" id="Edn-Ne-gpa"/>
+                                    <constraint firstAttribute="bottom" secondItem="DFp-h3-oXM" secondAttribute="bottom" constant="10" id="Sg8-W3-e2x"/>
+                                    <constraint firstItem="DFp-h3-oXM" firstAttribute="top" secondItem="KYN-KW-cMl" secondAttribute="bottom" id="ZEE-j6-AHf"/>
+                                    <constraint firstItem="KYN-KW-cMl" firstAttribute="leading" secondItem="WLb-ef-QV9" secondAttribute="leading" id="es5-Xd-QAE"/>
+                                    <constraint firstItem="KYN-KW-cMl" firstAttribute="top" secondItem="WLb-ef-QV9" secondAttribute="top" constant="10" id="wpo-oT-vA8"/>
+                                    <constraint firstItem="DFp-h3-oXM" firstAttribute="leading" secondItem="WLb-ef-QV9" secondAttribute="leading" id="zsx-TF-9Tz"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kru-pG-GVB">
                                 <rect key="frame" x="169" y="10.5" width="1" height="59.5"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -88,11 +88,14 @@
                             <constraint firstItem="WLb-ef-QV9" firstAttribute="leading" secondItem="gFd-oV-4hW" secondAttribute="leading" id="Da6-6e-IFg"/>
                             <constraint firstItem="WLb-ef-QV9" firstAttribute="leading" secondItem="xRo-nr-wlt" secondAttribute="trailing" id="G59-9E-N0r"/>
                             <constraint firstAttribute="bottom" secondItem="kru-pG-GVB" secondAttribute="bottom" constant="10" id="N0J-6U-pv5"/>
+                            <constraint firstItem="WLb-ef-QV9" firstAttribute="leading" secondItem="xRo-nr-wlt" secondAttribute="trailing" id="Pdh-dJ-f27"/>
                             <constraint firstAttribute="trailing" secondItem="WLb-ef-QV9" secondAttribute="trailing" id="SYz-Bq-DQj"/>
                             <constraint firstItem="WLb-ef-QV9" firstAttribute="leading" secondItem="xRo-nr-wlt" secondAttribute="trailing" id="Uu6-Po-2Wf"/>
                             <constraint firstItem="xRo-nr-wlt" firstAttribute="leading" secondItem="WLb-ef-QV9" secondAttribute="trailing" id="YI8-2D-NjI"/>
                             <constraint firstItem="xRo-nr-wlt" firstAttribute="leading" secondItem="WLb-ef-QV9" secondAttribute="trailing" id="a1h-WT-T3a"/>
                             <constraint firstAttribute="trailing" secondItem="xRo-nr-wlt" secondAttribute="trailing" id="fo2-1c-tPZ"/>
+                            <constraint firstItem="xRo-nr-wlt" firstAttribute="leading" secondItem="gFd-oV-4hW" secondAttribute="leading" id="gSJ-vc-OZf"/>
+                            <constraint firstAttribute="trailing" secondItem="WLb-ef-QV9" secondAttribute="trailing" id="hky-rw-IbR"/>
                             <constraint firstAttribute="bottom" secondItem="xRo-nr-wlt" secondAttribute="bottom" id="hvR-eV-QQj"/>
                             <constraint firstAttribute="bottom" secondItem="WLb-ef-QV9" secondAttribute="bottom" id="ofD-B4-6f1"/>
                             <constraint firstItem="kru-pG-GVB" firstAttribute="top" secondItem="gFd-oV-4hW" secondAttribute="top" constant="10" id="sXb-Hg-KKU"/>
@@ -101,12 +104,15 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="9zW-Cz-JGv"/>
+                                <exclude reference="YI8-2D-NjI"/>
+                                <exclude reference="a1h-WT-T3a"/>
+                                <exclude reference="fo2-1c-tPZ"/>
                                 <exclude reference="Da6-6e-IFg"/>
                                 <exclude reference="G59-9E-N0r"/>
                                 <exclude reference="SYz-Bq-DQj"/>
                                 <exclude reference="Uu6-Po-2Wf"/>
-                                <exclude reference="9zW-Cz-JGv"/>
-                                <exclude reference="YI8-2D-NjI"/>
+                                <exclude reference="zgE-lJ-yRo"/>
                             </mask>
                         </variation>
                     </view>
