--- a/LittleFormosa/ProfileViewController.xib
+++ b/LittleFormosa/ProfileViewController.xib
@@ -7,6 +7,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileViewController" customModule="LittleFormosa" customModuleProvider="target">
             <connections>
+                <outlet property="profileImageView" destination="xjc-2R-MbK" id="3L7-Sd-d3R"/>
+                <outlet property="profileImageViewHeightConstraint" destination="dD4-mg-DeY" id="tvx-F6-iNj"/>
+                <outlet property="profileImageViewTopConstraint" destination="T72-WK-1aq" id="p7B-hQ-vCM"/>
                 <outlet property="tableView" destination="tbX-3l-S0U" id="XFZ-5N-vWm"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -24,14 +27,31 @@
                         <outlet property="delegate" destination="-1" id="OVz-LD-bwO"/>
                     </connections>
                 </tableView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xjc-2R-MbK">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="300"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="300" id="dD4-mg-DeY"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="xjc-2R-MbK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="M3b-hf-qua"/>
                 <constraint firstAttribute="bottom" secondItem="tbX-3l-S0U" secondAttribute="bottom" id="Nbh-BF-HZ3"/>
+                <constraint firstItem="xjc-2R-MbK" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="T72-WK-1aq"/>
+                <constraint firstAttribute="trailing" secondItem="xjc-2R-MbK" secondAttribute="trailing" id="U17-Uq-dn0"/>
                 <constraint firstItem="tbX-3l-S0U" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Vc9-U0-jgJ"/>
                 <constraint firstAttribute="trailing" secondItem="tbX-3l-S0U" secondAttribute="trailing" id="ntb-vp-rMj"/>
+                <constraint firstItem="xjc-2R-MbK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ua1-cO-Ip4"/>
                 <constraint firstItem="tbX-3l-S0U" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="vAr-fr-Rvu"/>
+                <constraint firstItem="xjc-2R-MbK" firstAttribute="top" secondItem="tbX-3l-S0U" secondAttribute="top" id="w06-fg-gKQ"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="M3b-hf-qua"/>
+                    <exclude reference="w06-fg-gKQ"/>
+                </mask>
+            </variation>
         </view>
     </objects>
 </document>
