--- a/LittleFormosa/ProfileHeaderView.xib
+++ b/LittleFormosa/ProfileHeaderView.xib
@@ -3,15 +3,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileHeaderView" customModule="LittleFormosa" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="N87-XT-oS5" id="bqn-N3-LR3"/>
                 <outlet property="headlineLabel" destination="885-yf-CdQ" id="2O6-4r-qCC"/>
-                <outlet property="imageView" destination="UE7-V4-sCL" id="rNu-Qd-YJx"/>
                 <outlet property="nameLabel" destination="RbM-eb-NCQ" id="sYN-mp-cyQ"/>
+                <outlet property="profileInfoWrapperView" destination="x3f-9m-djX" id="rES-7g-SXt"/>
                 <outlet property="view" destination="iN0-l3-epB" id="TmR-mh-v7A"/>
             </connections>
         </placeholder>
@@ -21,57 +20,77 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="N87-XT-oS5">
-                    <rect key="frame" x="10" y="10" width="323" height="200"/>
+                    <rect key="frame" x="0.0" y="0.0" width="343" height="210"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UE7-V4-sCL">
-                            <rect key="frame" x="111" y="10" width="100" height="100"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x3f-9m-djX">
+                            <rect key="frame" x="0.0" y="95" width="343" height="115"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gradient-vertical-black" translatesAutoresizingMaskIntoConstraints="NO" id="seM-MM-c7Q">
+                                    <rect key="frame" x="0.0" y="0.0" width="343" height="115"/>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Eric Chen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbM-eb-NCQ">
+                                    <rect key="frame" x="20" y="50" width="303" height="30"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="mhe-DO-Acf"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="22"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="24, Software Engineer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="885-yf-CdQ">
+                                    <rect key="frame" x="20" y="80" width="303" height="25"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="25" id="DYj-d5-VEe"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="100" id="Nkh-XZ-m8O"/>
-                                <constraint firstAttribute="height" constant="80" id="e4K-5o-UnC"/>
-                                <constraint firstAttribute="width" secondItem="UE7-V4-sCL" secondAttribute="height" multiplier="1:1" id="p6l-dr-fmI"/>
+                                <constraint firstItem="seM-MM-c7Q" firstAttribute="top" secondItem="x3f-9m-djX" secondAttribute="top" id="2fU-Qy-DRm"/>
+                                <constraint firstItem="RbM-eb-NCQ" firstAttribute="leading" secondItem="x3f-9m-djX" secondAttribute="leading" constant="20" id="3Cj-vQ-HCF"/>
+                                <constraint firstAttribute="trailing" secondItem="RbM-eb-NCQ" secondAttribute="trailing" constant="20" id="58O-Dn-k2w"/>
+                                <constraint firstAttribute="trailing" secondItem="seM-MM-c7Q" secondAttribute="trailing" id="Hf0-69-tqb"/>
+                                <constraint firstItem="RbM-eb-NCQ" firstAttribute="top" secondItem="x3f-9m-djX" secondAttribute="top" constant="50" id="J2z-uy-FPh"/>
+                                <constraint firstItem="885-yf-CdQ" firstAttribute="top" secondItem="RbM-eb-NCQ" secondAttribute="bottom" id="LIM-ht-FE7"/>
+                                <constraint firstAttribute="trailing" secondItem="885-yf-CdQ" secondAttribute="trailing" id="OSW-uT-hIy"/>
+                                <constraint firstAttribute="bottom" secondItem="seM-MM-c7Q" secondAttribute="bottom" id="Ozy-P5-LsT"/>
+                                <constraint firstItem="885-yf-CdQ" firstAttribute="leading" secondItem="x3f-9m-djX" secondAttribute="leading" id="iJ4-az-Mfv"/>
+                                <constraint firstItem="seM-MM-c7Q" firstAttribute="leading" secondItem="x3f-9m-djX" secondAttribute="leading" id="jZE-Qe-Shl"/>
+                                <constraint firstItem="885-yf-CdQ" firstAttribute="leading" secondItem="RbM-eb-NCQ" secondAttribute="leading" id="mmG-EA-om1"/>
+                                <constraint firstAttribute="bottom" secondItem="885-yf-CdQ" secondAttribute="bottom" constant="10" id="pdR-Lm-kbm"/>
+                                <constraint firstItem="885-yf-CdQ" firstAttribute="trailing" secondItem="RbM-eb-NCQ" secondAttribute="trailing" id="t22-rX-nVS"/>
                             </constraints>
                             <variation key="default">
                                 <mask key="constraints">
-                                    <exclude reference="e4K-5o-UnC"/>
+                                    <exclude reference="OSW-uT-hIy"/>
+                                    <exclude reference="iJ4-az-Mfv"/>
                                 </mask>
                             </variation>
-                        </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Eric Chen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RbM-eb-NCQ">
-                            <rect key="frame" x="10" y="115" width="303" height="53"/>
-                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="22"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" text="Software Engineer at Google" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="885-yf-CdQ">
-                            <rect key="frame" x="10" y="168" width="303" height="22"/>
-                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="885-yf-CdQ" firstAttribute="top" secondItem="RbM-eb-NCQ" secondAttribute="bottom" id="0fx-cr-ocw"/>
-                        <constraint firstItem="UE7-V4-sCL" firstAttribute="top" secondItem="N87-XT-oS5" secondAttribute="top" constant="10" id="1Dx-JM-uqY"/>
-                        <constraint firstItem="UE7-V4-sCL" firstAttribute="centerX" secondItem="N87-XT-oS5" secondAttribute="centerX" id="4tS-Fr-Fj4"/>
-                        <constraint firstAttribute="bottom" secondItem="885-yf-CdQ" secondAttribute="bottom" constant="10" id="Jgd-9L-Df7"/>
-                        <constraint firstAttribute="trailing" secondItem="RbM-eb-NCQ" secondAttribute="trailing" constant="10" id="d9A-lX-OTS"/>
-                        <constraint firstItem="RbM-eb-NCQ" firstAttribute="top" secondItem="UE7-V4-sCL" secondAttribute="bottom" constant="5" id="dmB-UH-oYl"/>
-                        <constraint firstItem="RbM-eb-NCQ" firstAttribute="leading" secondItem="N87-XT-oS5" secondAttribute="leading" constant="10" id="tdP-sb-RWw"/>
-                        <constraint firstItem="885-yf-CdQ" firstAttribute="trailing" secondItem="RbM-eb-NCQ" secondAttribute="trailing" id="vsT-p7-39A"/>
-                        <constraint firstItem="885-yf-CdQ" firstAttribute="leading" secondItem="RbM-eb-NCQ" secondAttribute="leading" id="yFD-eg-H5g"/>
+                        <constraint firstAttribute="trailing" secondItem="x3f-9m-djX" secondAttribute="trailing" id="0YP-aH-pIL"/>
+                        <constraint firstItem="x3f-9m-djX" firstAttribute="leading" secondItem="N87-XT-oS5" secondAttribute="leading" id="Tvf-n9-McX"/>
+                        <constraint firstAttribute="bottom" secondItem="x3f-9m-djX" secondAttribute="bottom" id="qgx-wl-qr8"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="N87-XT-oS5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="4Xa-uc-Tc9"/>
+                <constraint firstItem="N87-XT-oS5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="4Xa-uc-Tc9"/>
                 <constraint firstAttribute="bottom" secondItem="N87-XT-oS5" secondAttribute="bottom" id="7SG-Jm-nYX"/>
-                <constraint firstAttribute="trailing" secondItem="N87-XT-oS5" secondAttribute="trailing" constant="10" id="8hb-xk-3j7"/>
-                <constraint firstItem="N87-XT-oS5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="eMC-P6-Hrc"/>
+                <constraint firstAttribute="trailing" secondItem="N87-XT-oS5" secondAttribute="trailing" id="8hb-xk-3j7"/>
+                <constraint firstItem="N87-XT-oS5" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="eMC-P6-Hrc"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="10.5" y="137"/>
         </view>
     </objects>
+    <resources>
+        <image name="gradient-vertical-black" width="1" height="256"/>
+    </resources>
 </document>
